// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain correct values for headingLarge 1`] = `
{
  "@media(min-width:1000px) and (max-width:1299px)": {
    "fontSize": "2.25rem",
  },
  "@media(min-width:1300px) and (max-width:1759px)": {
    "fontSize": "2.625rem",
  },
  "@media(min-width:1760px)": {
    "fontSize": "3rem",
  },
  "@media(min-width:760px) and (max-width:999px)": {
    "fontSize": "1.875rem",
  },
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 600 1.5rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for headingMedium 1`] = `
{
  "@media(min-width:1000px) and (max-width:1299px)": {
    "fontSize": "1.75rem",
  },
  "@media(min-width:1300px) and (max-width:1759px)": {
    "fontSize": "2rem",
  },
  "@media(min-width:1760px)": {
    "fontSize": "2.25rem",
  },
  "@media(min-width:760px) and (max-width:999px)": {
    "fontSize": "1.5rem",
  },
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 600 1.25rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for headingSmall 1`] = `
{
  "@media(min-width:1000px) and (max-width:1299px)": {
    "fontSize": "1.25rem",
  },
  "@media(min-width:1300px) and (max-width:1759px)": {
    "fontSize": "1.375rem",
  },
  "@media(min-width:1760px)": {
    "fontSize": "1.5rem",
  },
  "@media(min-width:760px) and (max-width:999px)": {
    "fontSize": "1.125rem",
  },
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 600 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for headingXLarge 1`] = `
{
  "@media(min-width:1000px) and (max-width:1299px)": {
    "fontSize": "2.75rem",
  },
  "@media(min-width:1300px) and (max-width:1759px)": {
    "fontSize": "3.25rem",
  },
  "@media(min-width:1760px)": {
    "fontSize": "3.75rem",
  },
  "@media(min-width:760px) and (max-width:999px)": {
    "fontSize": "2.25rem",
  },
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 600 1.75rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for headingXSmall 1`] = `
{
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 600 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for headingXXLarge 1`] = `
{
  "@media(min-width:1000px) and (max-width:1299px)": {
    "fontSize": "3.25rem",
  },
  "@media(min-width:1300px) and (max-width:1759px)": {
    "fontSize": "3.875rem",
  },
  "@media(min-width:1760px)": {
    "fontSize": "4.5rem",
  },
  "@media(min-width:760px) and (max-width:999px)": {
    "fontSize": "2.625rem",
  },
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 600 2rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for textLarge 1`] = `
{
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 400 2.25rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for textMedium 1`] = `
{
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 400 1.5rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for textSmall 1`] = `
{
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 400 1rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for textXLarge 1`] = `
{
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 400 3.25rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
  "textSizeAdjust": "none",
}
`;

exports[`should contain correct values for textXSmall 1`] = `
{
  "WebkitTextSizeAdjust": "none",
  "font": "normal normal 400 0.75rem/calc(0.44118125rem + 2ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
  "textSizeAdjust": "none",
}
`;
